fixed dark mode

--- a/app/components/ExperienceCard/ExperienceCard.css
+++ b/app/components/ExperienceCard/ExperienceCard.css
@@ -1,25 +1,26 @@
 .experience-card {
     height: auto;
-    padding-left: 36px;
     padding-right: 36px;
-    padding-top: 30px;
     padding-bottom: 30px !important;
     cursor: auto;
 }
 
 .experience-card h4 {
+    padding-left: 36px;
+    padding-top: 30px;
     position: relative;
     line-height: 30px;
 }
 
 .experience-card h5 {
+    position: relative;
+    padding-left: 36px;
     margin-top: 0;
     margin-bottom: 0;
     line-height: 20px;
 }
 
 p.experience-organization {
-    margin-left: 0;
     margin-top: 5px;
     margin-bottom: 7px;
     font-weight: 500 !important;
@@ -27,9 +28,9 @@ p.experience-organization {
 }
 
 p.experience-description {
-    margin-left: 0;
     margin-top: 3px;
     font-size: 16px !important;
+    line-height: 19px !important;
 }
 
 
@@ -44,10 +45,16 @@ p.experience-description {
 @media (max-width: 1008px) {
 
     .experience-card {
+        padding-right: 30px;
+    }
+
+    .experience-card h4 {
         padding-left: 32px;
-        padding-right: 32px;
         padding-top: 28px;
-        padding-bottom: 28px !important;
+    }
+
+    .experience-card h5 {
+        padding-left: 32px;
     }
 
 }
@@ -56,10 +63,16 @@ p.experience-description {
 @media (max-width: 873px) {
 
     .experience-card {
+        padding-right: 28px;
+    }
+
+    .experience-card h4 {
         padding-left: 30px;
-        padding-right: 30px;
         padding-top: 28px;
-        padding-bottom: 28px !important;
+    }
+
+    .experience-card h5 {
+        padding-left: 30px;
     }
 
 }
@@ -68,10 +81,16 @@ p.experience-description {
 @media (max-width: 747px) {
 
     .experience-card {
+        padding-right: 24px;
+    }
+
+    .experience-card h4 {
         padding-left: 25px;
-        padding-right: 25px;
         padding-top: 24px;
-        padding-bottom: 24px !important;
+    }
+
+    .experience-card h5 {
+        padding-left: 25px;
     }
 
 }
@@ -80,8 +99,17 @@ p.experience-description {
 @media (max-width: 666px) {
 
     .experience-card {
-        /* height: fit-content; */
         padding-bottom: 27px;
     }
+
+    .experience-card h4 {
+        padding-left: 28px;
+        padding-top: 26px;
+    }
+
+    .experience-card h5 {
+        padding-left: 28px;
+    }
+
 
 }
